--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   r2dbc:
-#    url: r2dbcs:mysql://127.0.0.1:13310/my_database
-#    username: root
-#    password: Wkfroot
-    url: r2dbcs:mysql://mysql:3306/my_database
+    url: r2dbcs:mysql://127.0.0.1:13310/my_database
     username: root
     password: Wkfroot
+#    url: r2dbcs:mysql://mysql:3306/my_database
+#    username: root
+#    password: Wkfroot
     pool:
       enabled: true
       initial-size: 10
