--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,3 +29,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: docker push
+      run: |
+        ${{ secrets.aliyun_dockerlogin }}
+        docker build . -t ${{ secrets.aliyun_dockerrepository }}
+        docker push ${{ secrets.aliyun_dockerrepository }}
