--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   r2dbc:
-    url: r2dbcs:mysql://localhost:3306/my_database?createDatabaseIfNotExist=true
-    username: root
-    password: root
-#    url: r2dbcs:mysql://47.93.55.26:3306/my_database
-#    username: wkf
-#    password: Wkfroot
+#    url: r2dbcs:mysql://localhost:3306/my_database?createDatabaseIfNotExist=true
+#    username: root
+#    password: root
+    url: r2dbcs:mysql://47.93.55.26:3306/my_database
+    username: wkf
+    password: Wkfroot
     pool:
       enabled: true
       initial-size: 10
